--- a/sq-front/src/index.css
+++ b/sq-front/src/index.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Sintony";
+    src: url("../fonts/Sintony/Sintony-Regular.ttf");
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "Sintony";
+    src: url("../fonts/Sintony/Sintony-Bold.ttf");
+    font-weight: bold;
+  }
+
+  @font-face {
+    font-family: "Days One";
+    src: url("../fonts/Days_One/DaysOne-Regular.ttf");
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "Zen Tokyo Zoo";
+    src: url("../fonts/Zen_Tokyo_Zoo/ZenTokyoZoo-Regular.ttf");
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "Monoton";
+    src: url("../fonts/Monoton/Monoton-Regular.ttf");
+    font-weight: normal;
+  }
